--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ h1 {
     font-family: fantasy;
     color: purple;
     font-size: 30px;
+    font-style: oblique;
 }
 
 ul {
@@ -20,19 +21,33 @@ li {
     border-radius: 10px;
     color: blue;
     background-color: lightpink;
+    opacity: 70%;
     list-style-position: inside;
     /* ⬆️ how to center numbered list https://stackoverflow.com/questions/19364836/how-to-center-ordered-list-number-in-html */
+    margin-bottom: 10px;
+    padding: 5px;
 }
+
+li:hover {
+    opacity: 100%;
+}
+/* opacity and :hover https://www.w3schools.com/css/css_image_transparency.asp */
 
 img {
     height: 200px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 120px;
+    border-style: double;
+    border-color: darkmagenta;
+    border-width: 6px;
 }
 
 body {
     font-family: sans-serif;
+    padding: 7%;
+    background-color: aliceblue;
 }
 
 h3 {
