--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 h1{
-    color: purple;
+    color: cornflowerblue;
     font-family: fantasy;
     font-size: 30px;
 }
@@ -25,14 +25,22 @@ img{
    display: block;
    margin-left: auto;
     margin-right: auto;
+    border-radius: 15px;
+    border-style: dashed;
+    border-color: rgb(154, 46, 46);
 }
 body{
     font-family: sans-serif;
+    background-color: chocolate;
 }
 h3{
     text-decoration: underline;
+    color: rgb(58, 106, 196);
 }
 p{
     padding-top: 20px; 
     padding-bottom: 20px;
+}
+h2{
+    color: rgb(10, 92, 246);
 }
