--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ li{
    color: blue;
    background-color: rgb(237, 155, 22);
    padding-left: 30px;
+   border-width: 12px;
+   bor
 }
 ul{
     list-style-type: none;
@@ -36,6 +38,7 @@ body{
 h3{
     text-decoration: underline;
     color: rgb(35, 98, 215);
+    
 }
 p{
     padding-top: 20px; 
