--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ body {
 }
 h3 {
   text-decoration-line: underline;
-  color: blue;
   padding: 10px;
 }
 p {
@@ -35,4 +34,24 @@ p {
 }
 h1 {
   font-size: 30px;
+  font-family: URW Chancery L, cursive;
+}
+body {
+  margin: 60px;
+}
+p.bug {
+  margin: 25px;
+}
+a {
+  color: darkmagenta;
+}
+img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  margin: 0 auto;
+  viewport-fit: 100;
+}
+h1 {
+  font-size: 45px;
 }
