--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,34 @@
-
-#title{
-    font-weight: bold;
-}
-    
-li{
-    text-align:center
+h1{
+    font-family:  fantasy;
+    color:purple;
+    font-size: 40px;
+    font-style: oblique;
 }
 
-li {
-    border:1px solid red;
-    border-radius: 5px;
+ul{
+    border-radius: 10px;
+    color: azure;
+    background-color: yellowgreen;
+    opacity: 80%;
+    list-style-position: inside;
+    margin-bottom: 10px;
+    padding:5px;
 }
-
-li {
-    color: blue 
-   
-}
-
-img {
-    height: 200px;
+li:hover{
+    height:210px;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 120px;
+    border-style: double;
+    border-color: darkcyan;
+    border-width: 6px;
 }
 
 body{
-    font-family:sans-serif;
+    font-family: sans-serif;
+    padding: 10%;
+    background-color: teal;
 }
 
 h3{
@@ -33,12 +39,3 @@ p{
     padding-top: 20px;
     padding-bottom: 20px;
 }
-
-h1{
-    font-size: 30px;
-}
-
-ul,ol {
-    padding-left: 30px;
-}
-
