added css attributes

--- a/style.css
+++ b/style.css
@@ -2,16 +2,26 @@
     font-family: fantasy;
     color: purple;
     font-size: 30px;
+    background-color: bisque;
+
 }
 
 body {
     font-family: sans-serif;
-    background-color: blue;
+    color: rgb(24, 65, 159);
+    font-style: italic;
+
+
+
+
 
 }
 
 .links {
     font-weight: bold;
+    text-indent: 3cm;
+
+
 }
 
 li {
@@ -21,20 +31,29 @@ li {
     border-color: red;
     font-family: blue;
     background-color: lightpink;
+
 }
 
 h3 {
     text-decoration: underline;
+
 }
 
 .images {
     height: 200px;
+    width: auto;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #paragraph {
 
     padding-top: 20px;
     padding-bottom: 20px;
+    text-transform: uppercase;
+
+
 }
 
 #ul {
