--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,35 @@
 body {
 	margin: auto;
 	text-align: center;
+	font-family: sans-serif;
+	background-color: coral;
 }
 
 h1 {
 	font-family: fantasy;
 	font-style: italic;
 	color: purple;
+	font-size: 30px;
+}
+
+h2 {
+	color: azure;
+}
+
+h3 {
+	text-decoration: underline;
+	color: azure;
 }
 
 ul {
 	margin: auto;
 	list-style-type: none;
+}
+
+p {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: azure;
 }
 
 ol {
@@ -26,4 +44,17 @@ li {
 	width: 60vw;
 	color: blue;
 	background-color: lightpink;
+	padding: 30px;
+	font-size: 18px;
+	font-weight: 700;
+}
+
+img {
+	width: 200px;
+	height: 200px;
+	border: 3px inset gold;
+}
+
+.intro {
+	font-size: 20px;
 }
